[gd_scene format=3 uid="uid://bqx8x7rlnhjwy"]

[ext_resource type="Script" uid="uid://d3gb6npr6oo4m" path="res://scripts/GameManager.gd" id="2_game"]
[ext_resource type="PackedScene" uid="uid://dev1vlrye5a0i" path="res://scenes/GridManager.tscn" id="2_rarhs"]
[ext_resource type="Script" uid="uid://bvh5ebk8yci8p" path="res://scripts/tile_generator.gd" id="3_q8u5g"]
[ext_resource type="Script" uid="uid://bewyf1ek3euuf" path="res://scripts/UIManager.gd" id="3_ui"]
[ext_resource type="FontFile" uid="uid://bv8hbsw2wqbmi" path="res://assets/fonts/RubikDistressed-Regular.ttf" id="4_nxtc6"]
[ext_resource type="AudioStream" uid="uid://dqhsrebau2rjr" path="res://sounds/kaching.mp3" id="4_rarhs"]
[ext_resource type="LabelSettings" uid="uid://cqh38xyhmv16p" path="res://assets/fonts/general_label_settings.tres" id="5_jlsqs"]
[ext_resource type="AudioStream" uid="uid://fh5ylhcf6t2g" path="res://sounds/short-beep.mp3" id="5_vcsgt"]
[ext_resource type="Texture2D" uid="uid://bot0hpem4nsmm" path="res://assets/backgrounds/bees.png" id="6_c01mt"]

[sub_resource type="LabelSettings" id="LabelSettings_vcsgt"]
font = ExtResource("4_nxtc6")
font_size = 89
outline_size = 2
outline_color = Color(0.618242, 0.48203105, 0, 1)

[node name="Main" type="Node2D" unique_id=1302130063]
metadata/_edit_lock_ = true

[node name="Bees" type="Sprite2D" parent="." unique_id=2016562393]
self_modulate = Color(0.5008638, 0.338319, 0, 1)
position = Vector2(570, 1202)
scale = Vector2(1.8478965, 2.6674106)
texture = ExtResource("6_c01mt")

[node name="GridManager" parent="." unique_id=895251005 instance=ExtResource("2_rarhs")]
grid_width = 5
grid_height = 8
hex_size = 100.0
metadata/_edit_lock_ = true

[node name="Tiles" type="CanvasLayer" parent="GridManager" unique_id=305873846]
follow_viewport_enabled = true

[node name="Arrows" type="CanvasLayer" parent="GridManager" unique_id=1547026832]
follow_viewport_enabled = true

[node name="TileGenerator" type="Node" parent="GridManager" unique_id=1061406703]
script = ExtResource("3_q8u5g")

[node name="GameManager" type="Node" parent="." unique_id=1588637464]
script = ExtResource("2_game")

[node name="UIManager" type="Control" parent="." unique_id=101879260]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_ui")

[node name="UI" type="CanvasLayer" parent="." unique_id=1457645348]

[node name="WordDisplay" type="Label" parent="UI" unique_id=50927497]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -259.0
offset_top = -202.0
offset_right = 199.0
offset_bottom = -145.0
grow_horizontal = 2
grow_vertical = 0
label_settings = ExtResource("5_jlsqs")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="UI" unique_id=1372580073]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 39.0
offset_top = -2280.0
offset_right = 428.0
offset_bottom = -2172.0
grow_vertical = 0
text = "Score: 0"
label_settings = ExtResource("5_jlsqs")
vertical_alignment = 1

[node name="TimeDisplay" type="Label" parent="UI" unique_id=269649100]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -312.0
offset_top = -2280.0
offset_right = -25.0
offset_bottom = -2172.0
grow_horizontal = 0
grow_vertical = 0
text = "00:00"
label_settings = ExtResource("5_jlsqs")
horizontal_alignment = 2
vertical_alignment = 1

[node name="WordsFound" type="Label" parent="UI" unique_id=1215204605]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 428.0
offset_top = -2280.0
offset_right = 831.0
offset_bottom = -2172.0
grow_vertical = 0
text = "Words: 0"
label_settings = ExtResource("5_jlsqs")
vertical_alignment = 1

[node name="SubmitButton" type="Button" parent="UI" unique_id=559092073]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -128.0
offset_right = 100.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0
text = "Submit"

[node name="RestartButton" type="Button" parent="UI" unique_id=41001926]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 144.0
offset_top = -128.0
offset_right = 280.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0
text = "↩️ Restart"

[node name="ShuffleButton" type="Button" parent="UI" unique_id=1220611953]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -360.0
offset_top = -128.0
offset_right = -232.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0
text = "Shuffle"

[node name="ClearButton" type="Button" parent="UI" unique_id=1220611952]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -184.0
offset_top = -128.0
offset_right = -64.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0
text = "Clear"

[node name="WordFeedback" type="Node2D" parent="UI" unique_id=634489320]
visible = false
metadata/_edit_group_ = true

[node name="Polygon2D" type="Polygon2D" parent="UI/WordFeedback" unique_id=976529351]
position = Vector2(243, 592)
scale = Vector2(1.1358025, 1.4791666)
color = Color(0.9598914, 0.7302791, 0, 1)
polygon = PackedVector2Array(-48, 272, 56, 232, 152, 272, 248, 232, 360, 208, 448, 272, 544, 272, 646.51074, 343.88733, 536, 448, 424, 440, 336, 376, 224, 424, 144, 392, 32, 400, -64, 368, -56, 280)

[node name="FeedbackLabel" type="Label" parent="UI/WordFeedback" unique_id=477729317]
unique_name_in_owner = true
offset_left = 249.0
offset_top = 1000.0
offset_right = 872.0
offset_bottom = 1147.0
text = "FEEDBACK"
label_settings = SubResource("LabelSettings_vcsgt")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Sounds" type="Node" parent="." unique_id=948160424]

[node name="Kaching" type="AudioStreamPlayer" parent="Sounds" unique_id=319395583]
stream = ExtResource("4_rarhs")

[node name="ShortBeep" type="AudioStreamPlayer" parent="Sounds" unique_id=1688827695]
stream = ExtResource("5_vcsgt")
